clang/test/BSC/Negative/Ownership/Owned/owned_temporary_funCall3/owned_temporary_funCall3.cbs
// RUN: %clang_cc1 -verify %s

int* owned func1(int* owned p) { return p; }
int owned func2(int owned a) { return a; }
int* func3(int* p) { return p; }
void test1(int* owned p, int owned a, int* p2) {
    func1(p);   // expected-error {{memory leak because temporary variable 'func1(p)' is owned or indirect owned type, please fix it}}
    *func1(p);  // expected-error {{memory leak because temporary variable 'func1(p)' is owned or indirect owned type, please fix it}}
    int res1 = *func1(p);   // expected-error {{memory leak because temporary variable 'func1(p)' is owned or indirect owned type, please fix it}}
    func2(a);   // expected-error {{memory leak because temporary variable 'func2(a)' is owned or indirect owned type, please fix it}}
    *func2(a);  // expected-error {{indirection requires pointer operand ('owned int' invalid)}}
    func3(p2);
    *func3(p2); // expected-warning {{expression result unused}}
    int res2 = *func3(p2);
}

void test2(int* owned p1, int* owned p2) {
    if (p1 == p2) {
        return;
    }
    if (func1(p1) == p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is owned or indirect owned type, please fix it}}
        return;
    }
    if (p1 == func1(p2)) {  // expected-error {{memory leak because temporary variable 'func1(p2)' is owned or indirect owned type, please fix it}}
        return;
    }
    if (func1(p1) == func1(p2)) {   // expected-error {{memory leak because temporary variable 'func1(p1)' is owned or indirect owned type, please fix it}} // expected-error {{memory leak because temporary variable 'func1(p2)' is owned or indirect owned type, please fix it}}
        return;
    }
    if (func1(p1) >= p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is owned or indirect owned type, please fix it}}
        return;
    }
    if (func1(p1) > p2) {   // expected-error {{memory leak because temporary variable 'func1(p1)' is owned or indirect owned type, please fix it}}
        return;
    }
    if (func1(p1) <= p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is owned or indirect owned type, please fix it}}
        return;
    }
    if (func1(p1) < p2) {   // expected-error {{memory leak because temporary variable 'func1(p1)' is owned or indirect owned type, please fix it}}
        return;
    }
    if (func1(p1) != p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is owned or indirect owned type, please fix it}}
        return;
    }
}